Adding streaming option to STS sample
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1560026 13f79535-47bb-0310-9956-ffa450edef68